4:12pm sync