@@ -3,8 +3,10 @@ package com.beersherpa;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
-import java.net.URLConnection;
 import java.util.Map;
 
 import javax.servlet.http.HttpServlet;
@@ -26,20 +28,31 @@ public class APIRequestServlet extends HttpServlet
 		for(Map.Entry<String,String[]> param : params.entrySet())
 		{
 			if(!param.getKey().equals("endpoint"))
-				urlString += "&"+param.getValue()[0];
+			{
+				urlString += "&"+ param.getKey() + "=" + param.getValue()[0].replace(" ", "+");
+			}
 		}
-		
-		URL url = new URL(urlString);
-		URLConnection yc = url.openConnection();
-        BufferedReader in = new BufferedReader(new InputStreamReader(yc.getInputStream()));
-        String inputLine;
+				
+		try
+		{
+			URL url = new URI(urlString).toURL();
+			HttpURLConnection yc = (HttpURLConnection) url.openConnection();
+	        BufferedReader in = new BufferedReader(new InputStreamReader(yc.getInputStream()));
+	        String inputLine;
 
-        while ((inputLine = in.readLine()) != null) 
-            response += inputLine;
-        in.close();
-        
-        resp.addHeader("Access-Control-Allow-Origin", "*");
-        resp.setContentType("application/json");
-		resp.getWriter().println(response);
+	        while ((inputLine = in.readLine()) != null) 
+	            response += inputLine;
+	        in.close();
+	        
+	        resp.addHeader("Access-Control-Allow-Origin", "*");
+	        resp.setContentType("application/json");
+			resp.getWriter().println(response);
+		}
+		catch(URISyntaxException e)
+		{
+			System.out.println("error: " + e.getMessage());
+			// TODO Auto-generated catch block
+			e.printStackTrace();
+		}
 	}
 }
